--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title> Hello Intellipaat </title>
+<title> Welcome to the Intellipaat </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
 </body>
 </html>
+
 
